--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodeapp",
   "version": "0.0.1",
   "description": "REST service for torrent index requests",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
     "scrape-torrent-stats": "0.0.2"
